--- a/data/domains.yaml
+++ b/data/domains.yaml
@@ -128,3 +128,10 @@
 - excellarate.net
 - splunk.com
 - commio.com
+- iriscan.io
+- azumo.co
+- educative.io
+- datastax.com
+- millims-ims.com
+- wise-engineering.net
+- coresignal.com
