--- a/rules.yaml
+++ b/rules.yaml
@@ -24,4 +24,5 @@
   OR devoxsoftware.eu OR hellopersimmon.com OR triplebyte.com OR mindbowserinfosolutions.net
   OR eli@cumul.io OR youragency.com OR meetheropa.com OR lacework.net OR email.revelo.io
   OR autimo.org OR britive.com OR makeen.io OR modernize.io OR exacttarget.com OR
-  excellarate.net OR splunk.com OR commio.com
+  excellarate.net OR splunk.com OR commio.com OR iriscan.io OR azumo.co OR educative.io
+  OR datastax.com OR millims-ims.com OR wise-engineering.net
