--- a/rules.yaml
+++ b/rules.yaml
@@ -25,4 +25,4 @@
   OR eli@cumul.io OR youragency.com OR meetheropa.com OR lacework.net OR email.revelo.io
   OR autimo.org OR britive.com OR makeen.io OR modernize.io OR exacttarget.com OR
   excellarate.net OR splunk.com OR commio.com OR iriscan.io OR azumo.co OR educative.io
-  OR datastax.com OR millims-ims.com OR wise-engineering.net
+  OR datastax.com OR millims-ims.com OR wise-engineering.net OR coresignal.com
